--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## 目的",
   "main": "index.js",
   "scripts": {
-    "start": "webpack",
+    "server": "node --loader ts-node/esm src/index.ts",
+    "start": "webpack-dev-server --hot --progress --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,11 +20,18 @@
   },
   "homepage": "https://github.com/hailiting/polkadotjs_util#readme",
   "dependencies": {
+    "@polkadot/api": "^6.10.3",
+    "@polkadot/keyring": "^8.0.5",
+    "@polkadot/util-crypto": "^8.0.5",
     "awesome-typescript-loader": "^5.2.1",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.5.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
-    "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.64.4",
+    "webpack-dev-server": "^4.6.0"
   }
 }
