--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "webpack-cli": "^4.9.1"
