--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@polkadot/util-crypto": "^8.0.5",
     "awesome-typescript-loader": "^5.2.1",
     "buffer": "^6.0.3",
+    "compression-webpack-plugin": "^9.2.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.6",
